refactor: start new user data model, deprecate user attributes (wip)